[package]
name = "Clusterline"
version = "0.0.1"

[features]
default = ["bitmap_allocater"]
bitmap_allocater = []
virtio_gpu = []
nvme = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = 3           # maximize optimizations
lto = "fat"             # link time optimization across modules
codegen-units = 1       # better inlining/analysis at the cost of speed
